<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="action_settings">Setting</string>
    <string name="app_name">body camera</string>
    <string name="refresh">Refresh</string>
    <string name="open_wifi">Open WiFi connection body camera</string>
    <string name="download">Download</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_photo">Delete the picture</string>
    <string name="delete_video">Delete the video</string>
    <string name="delete_message">Confirm delete</string>
    <string name="intent_to_video_activity">Is jumping……</string>
    <string name="select_all">Select all</string>
    <string name="cancel_all">Cancel selection</string>
    <string name="download_select">Download selected</string>
    <string name="delete_select">Delete Selected</string>
    <string name="now_delete_item">Is deleting</string>
    <string name="no_available_player">Did not find the video player</string>
    <string name="on_loading">Is delete……</string>
    <string name="null_source">No files found</string>
    <string name="deleting">Is deleting……</string>
    <string name="delete_all">Whether you want to delete all local</string>
    <string name="photo">photo</string>
    <string name="video">video</string>
    <string name="file">files</string>
    <string name="delete_or_not">Confirm delete</string>
    <string name="delete_fail">failed to delete</string>
    <string name="no_data_retry">No sync to data, please try again.</string>
    <string name="begain_download">Start download</string>
    <string name="begain_delete">Start to delete</string>
    <string name="no_query_device">There is no query to the device</string>
    <string name="connection_vifi">Please connect the wireless hotspot of the Z12 device and try again.</string>
    <string name="go_setting">Go to set</string>
    <string name="on_video_photo">Successful camera on recording</string>
    <string name="take_pic_fail_retry">Photo failed, please try again.</string>
    <string name="take_pic_success">Take pictures of success, you can shoot</string>
    <string name="number_of_pic">photos</string>
    <string name="exit">exit</string>
    <string name="can_record_time">Remaining recording time</string>
    <string name="take_pic_numbers">Number of remaining pictures</string>
    <string name="fm_version">Firmware version number</string>
    <string name="power">Equipment power</string>
    <string name="card_status">Memory card status</string>
    <string name="available_space">Available space</string>
    <string name="no_data">No data</string>
    <string name="local_file">Local file</string>

    <string name="add_device">add device</string>
    <string name="input_wifi_pwd">Please input the %1$s password</string>

    <string name="content_device">connecting to device %1$s……</string>

    <string name="home">Album</string>
    <string name="devices">Devices</string>
    <string name="about">About</string>
    <string name="title_activity_settings">Settings</string>


    <string name="delete_config">Do you want to delete the chosen file?</string>
    <string name="loading_data">Downloading data……</string>
    <string name="title_activity_file">FileActivity</string>
    <string name="all_photo">Picture</string>
    <string name="all_video">Video</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_download">Download</string>
    <string name="input_new_pwd">Please input new password</string>
    <string name="input_new_pwd_config">Please input new password again</string>
    <string name="success_change_pwd">Change password successfully! Please re-connect device.</string>
    <string name="failed_change_pwd">Failed to change password!Please try again.</string>
    <string name="pwd_same">Password input is different!</string>
    <string name="pwd_edit">Please input password by 8&#8211;20 letters or figures!</string>
    <string name="pwd_edit2">Please enter at least eight letters or Numbers!</string>
    <string name="failed_set_switch">Failed setting, please try again!</string>
    <string name="format">Formatting successfully!</string>
    <string name="format_config">Do you need to format?</string>
    <string name="format_failed">Failed to format！</string>
    <string name="title_activity_advanced">Advanced setting</string>
    <string name="title_activity_info">Camera information</string>
    <string name="dialog_title">Processing</string>
    <string name="dialog_title2">Processing</string>
    <string name="dialog_wait_message">Please wait&#8230;</string>
    <string name="have_not_space">Mobile phone storage capacity is not enough!</string>
    <string name="title_activity_space_management">Space management</string>

    <string name="space_tips">If the remaining storage space is less than reserved available space, program cannot be downloaded.</string>
    <string name="save_config">Save</string>
    <string name="part_a">Remaining storage</string>
    <string name="part_b">Other program</string>
    <string name="part_c">Picture</string>
    <string name="part_d">Video</string>
    <string name="live_free_space">Reserved available space</string>
    <string name="all_space">Total storage space：</string>
    <string name="local_patch">Local path:</string>
    <string name="is_contenting_wifi">connecting wifi……</string>
    <string name="input_pwd">Please input Wifi password</string>
    <string name="select_wifi">Please choose a Wifi to connect</string>
    <string name="iput_value">Please set a number which is bigger than %1$s</string>
    <string name="save_success">Save successfully!</string>
    <string name="start_download">Start downloading</string>
    <string name="failed_add">Failed task adding</string>
    <string name="removed">Removed</string>
    <string name="inserted">Inserted</string>
    <string name="locked">Locked</string>
    <string name="delete_devices_message">Do you want to delete this device? Please find this device\'s wifi in system wifi list and forget its password.</string>
    <string name="title_activity_about">About</string>
    <string name="copy_right">© 2006&#8211;2017 \n All rights reserved.</string>
    <string name="reset">Reset to factory settings</string>
    <string name="collision_induction">G-sensor sensitivity</string>
    <string name="file_length">Split storage setting</string>
    <string name="reset_config">Do you want to reset to factory setting? After reset, all new settings will be cleared.</string>
    <string name="download_complete">Files downloading complete</string>
    <string name="downloading_file">Downloading %1$s！</string>
    <string name="reconnect_device">Please reconnect to your device!!</string>
    <string name="reconnect_device2">loading...</string>
    <string name="try_again">Try again</string>
    <string name="device_name">Device name</string>
    <string name="device_pwd">Device password</string>
    <string name="record_auto">Automatically recording</string>
    <string name="record_quality">Video resolution</string>
    <string name="format_device">Format</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="device_info">Device information</string>
    <string name="connect_failed">Connecting failed!</string>
    <string name="download_failed">Failed to download files！</string>



    <!--//2017.4.24新加 碰撞感应灵敏度-->
    <string name="off">off</string>
    <string name="low">LOW</string>
    <string name="med">MED</string>
    <string name="high">HIGH</string>

    <!--录制文件时长-->
    <string name="min3">3min</string>
    <string name="min5">5min</string>
    <string name="min10">10min</string>

    <string name="storage_manager">Storage Manager</string>
    <string name="about_us">About Us</string>
    <string name="all_picture">All Picture</string>
    <string name="home_all_video">All Video</string>
    <string name="please_enter_the_numbers">Please enter the Numbers!</string>
    <string name="please_enter_the_Wifi_password">Please enter the Wifi password</string>
    <string name="wifi_pwd_confirm">OK</string>
    <!--下载-->
    <string name="download_photo">Picture Download</string>
    <string name="download_in_progress">Download in progress...</string>

    <!--退出程序-->
    <string name="application_exit">Press the exit again</string>
    
    <!--公司名-->
    <string name="firm_name">ADVANCED PLUS</string>

    <!--空数据-->
    <string name="null_download">No downloadable content</string>
    <!--语言-->
    <string name="app_language">language choice</string>
    <!--wifi未连接-->
    <string name="wifi_not_connected">WiFi Not Connected</string>
    <string name="wifi_Switch">Switchover Device</string>
    <string name="wifi_Switch2">Switchover</string>
    <string name="wifi_Switch_msg">Please disconnect the current connection before new equipment</string>
    <string name="wifi_dian_ji_lian_jie">Please click here</string>
    <string name="ben_di_tu_pina">Photo</string>
    <string name="ben_di_mei_tu_pina">No photos.</string>
    <string name="ban_ben_hao">APP Version: </string>
    <string name="ban_ben_hao2">APP Version</string>
    <string name="ti_shi_title">Hint</string>
    <string name="ti_shi_msg">Please connect to the right equipment</string>
    <string name="xia_zai_ti_shi_msg">Please select at least one</string>
    <string name="yi_xia_zai">Have downloaded</string>
</resources>