<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_pwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_new_pwd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_pwd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_new_pwd_config"
        android:inputType="textPassword" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center|right"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/btn_config_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>
