<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_line"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hkcect.z12.ui.SettingActivity"
    tools:showIn="@layout/activity_setting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/view_line"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/view_background"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center|left"
                android:text="@string/device_name"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/device_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:ellipsize="middle"
                android:gravity="center|right"
                android:lines="1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/view_background"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center|left"
                android:text="@string/device_pwd"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/device_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:ellipsize="middle"
                android:gravity="center|right"
                android:lines="1"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/view_background"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center|left"
                android:text="@string/record_auto"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/switch_record"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="right|center" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/view_background"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center|left"
                android:text="@string/record_quality"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_record_quality"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:ellipsize="middle"
                android:gravity="center|right"
                android:lines="1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/view_background"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/format"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:gravity="center|left"
                android:text="@string/format_device"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/advanced_settings"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:gravity="center|left"
                android:text="@string/advanced_settings"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:gravity="center|left"
                android:text="@string/device_info"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
